--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,16 +4,10 @@ on:
   push:
     branches:
       - master
-      - dev
-      - feature/*
-  pull_request:
-    branches:
-      - master
-      - dev
 
 jobs:
-  build-and-test:
-    name: Build and Test Angular Application
+  build-and-deploy:
+    name: Build and Deploy Frontend
     runs-on: ubuntu-latest
 
     steps:
@@ -25,17 +19,27 @@ jobs:
         with:
           node-version: '18'
 
-      - name: 🚀 Cache npm dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
-
       - name: ✅ Install dependencies
         run: npm install
 
-      - name: 🧪 Run tests with Karma
-        run: npm run test -- --watch=false --browsers=ChromeHeadless
-
       - name: 🏗️ Build the application
         run: npm run build -- --configuration production
+
+      - name: 📦 Build Docker Image
+        run: |
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/runalliance-front:latest .
+
+      - name: 🔑 Login to Docker Hub
+        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
+      - name: 🚀 Push Docker Image to Docker Hub
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/runalliance-front:latest
+
+      - name: 📡 Deploy on Server
+        run: |
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_ed25519 ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "
+          cd /home/ubuntu/RunAlliance-front &&
+          docker compose down &&
+          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/runalliance-front:latest &&
+          docker compose up -d --build
+          "
