--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,15 @@ services:
   frontend:
     image: julieraymonddev/runalliance-front:latest
     restart: always
-    ports:
-      - "8081:80"
-    deploy:
-      resources:
-        reservations:
-          cpus: '0.3'
-          memory: 576M
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.frontend.rule=Host('run-alliance.wcs-students.fr')"
+      - "traefik.http.routers.frontend.entrypoints=websecure"
+      - "traefik.http.routers.frontend.tls.certresolver=letsencrypt"
+      - "traefik.http.services.frontend.loadbalancer.server.port=80"
+    networks:
+      - traefik
+
+networks:
+  traefik:
+    external: true
