--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,12 +3,12 @@ name: CI/CD Angular
 on:
   push:
     branches:
-      - main
+      - master
       - dev
       - feat/**
   pull_request:
     branches:
-      - main
+      - master
       - dev
 
 jobs:
