--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  server_name run-alliance.wcs-students.fr;
+  server_name localhost; # Remplacé ou ignoré si non utilisé avec domaine
 
   root /usr/share/nginx/html; # Correspond à la COPY du Dockerfile
   index index.html;
